--- a/jsp.base.crud/src/main/webapp/WEB-INF/web.xml
+++ b/jsp.base.crud/src/main/webapp/WEB-INF/web.xml
@@ -2,5 +2,5 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Maven 기반 웹 어플리케이션</display-name>
 </web-app>
